[package]
name = "ddlogs"
version = "0.1.4"
edition = "2021"
authors = ["Lucas Vieira <vieiralucas4@gmail.com>"]
description = "A CLI tool for tailing and querying Datadog logs"
repository = "https://github.com/faiscadev/ddlogs"
license = "Apache-2.0"
keywords = ["datadog", "logs", "cli", "tail", "monitoring"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
datadog-api-client = "0.24"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
toml = "0.9"
dirs = "6.0"
